tests/snapshots/execution_spec__test-expr-math.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar JSON

scalar PhoneNumber

type Query {
  add: Int
  dec: Int
  div1: Int
  div2: Int
  inc: Int
  mod: Int
  multiply: Float
  product: Int
  subtract: Int
  sum: Int
}

scalar Url

schema {
  query: Query
}
