tests/snapshots/execution_spec__test-expr-math.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  add: Int @expr(body: {add: [{const: 40},{const: 2}]})
  dec: Int @expr(body: {dec: {const: 43}})
  div1: Int @expr(body: {divide: [{const: 9828},{const: 234}]})
  div2: Int @expr(body: {divide: [{const: 105},{const: 2.5}]})
  inc: Int @expr(body: {inc: {const: 41}})
  mod: Int @expr(body: {mod: [{const: 1379},{const: 1337}]})
  multiply: Float @expr(body: {multiply: [{const: 7},{const: 6}]})
  product: Int @expr(body: {product: [{const: 7},{const: 3},{const: 2}]})
  subtract: Int @expr(body: {subtract: [{const: 52},{const: 10}]})
  sum: Int @expr(body: {sum: [{const: 20},{const: 15},{const: 7}]})
}
