tests/snapshots/execution_spec__test-expr-success.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(port: 8000) @upstream(baseURL: "http://localhost:50051", batch: {delay: 10, maxSize: 1000}) @link(id: "news", src: "news.proto", type: Protobuf) {
  query: Query
}

input NewsInput {
  body: String
  id: Int
  postImage: String
  title: String
}

type News {
  body: String
  id: Int
  postImage: String
  title: String
}

type Post {
  content: String @expr(body: {graphQL: {args: [{key: "id", value: "{{value.id}}"}], name: "postContent"}})
  id: Int!
}

type Query {
  cond: Post @expr(body: {if: {cond: {const: true}, else: {http: {path: "/posts/1"}}, then: {http: {path: "/posts/2"}}}})
  greeting: String @expr(body: {const: "hello from server"})
  news(news: NewsInput!): News! @expr(body: {grpc: {body: "{{args.news}}", batchKey: ["news", "id"], method: "news.NewsService.GetMultipleNews"}})
  post(id: Int!): Post @expr(body: {http: {baseURL: "http://jsonplacheholder.typicode.com", path: "/posts/{{args.id}}"}})
}
