tests/snapshots/execution_spec__test-expr.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema {
  query: Query
}

type Query {
  hello: String @expr(body: "Hello from server")
}
