tests/snapshots/execution_spec__test-file-no-src.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "@file must have parameter src",
    "trace": [
      "Query",
      "user",
      "@file"
    ],
    "description": null
  }
]
