tests/snapshots/execution_spec__test-file-not-found.md_errors.snap
---
source: tests/execution_spec.rs
expression: errors
---
[
  {
    "message": "file not found: \"./doesntexist.json\"",
    "trace": [
      "Query",
      "user",
      "@file"
    ],
    "description": null
  }
]
