tests/snapshots/execution_spec__test-file.md_client.snap
---
source: tests/execution_spec.rs
expression: merged
---
type Query {
  users: [User]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
