tests/snapshots/execution_spec__test-file.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server @upstream {
  query: Query
}

type Query {
  users: [User] @file(src: "./tests/http/config/users.json")
}

type User {
  id: Int
  name: String
}
